Se agrego otra descripcion y se elimino el boton de pdf

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <h5>Breve explicación</h5>
           <ul>
             <li>Esto aplica a las condiciones laborales en Guatemala</li>
-            <li>Un sueldo base por cada año de trabajo. También se suman los meses trabajados. Artículos de referencia 77, 82 y 90 Código de Trabajo.</li>
+            <li>Este es un cálculo basado en una empresa estándar y los resultados podrían variar dependiendo del giro de negocio.</li>
+            <li>El sueldo es un promedio de los últimos 6 meses en caso haya habido un aumento en ese lapso de tiempo.</li>
+            <li>1 sueldo base por cada año de trabajo. También se suman los meses trabajados. Artículos de referencia 77, 82 y 90 Código de Trabajo.</li>
             <li>Bono 14 y Aguinaldo es un sueldo base divido 12 y se multiplica por cada mes laborado en el ciclo actual.</li>
             <li>El Bono 14 inicia a correr desde el 1 de julio al 30 de junio.</li>
             <li>El Aguinaldo inicia a correr desde el 1 de diciembre al 30 de noviembre.</li>
@@ -112,7 +114,7 @@
               </div>
             </div>
           
-          <button class="btn btn-success btn-block" onclick="getData()" data-toggle="modal" data-target="#exampleModal">Eviar datos</button>
+          <button class="btn btn-success btn-block" onclick="getData()" data-toggle="modal" data-target="#exampleModal">Calcular</button>
           </div>
         </div>
         
@@ -138,7 +140,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            <button class="btn btn-info" id="downloadPDF" disabled>Descargar PDF</button>
+            <!-- <button class="btn btn-info" id="downloadPDF" disabled>Descargar PDF</button> -->
           </div>
         </div>
       </div>
